updated packages and fixed when images too large

--- a/src/App.css
+++ b/src/App.css
@@ -21,16 +21,21 @@ footer{
 
 .app-container{
   display: flex;
-    height: 100%;
-    width: 100vw;
-    max-width: 100%;
-    margin: 0;
-    padding:0;
-    justify-content:center;
-    align-items: center;
-    text-align: center;
-    margin-top: 50px;
-    gap: 50px;
+  height: 100%;
+  width: 100vw;
+  max-width: 100%;
+  margin: 0;
+  padding:0;
+  justify-content:center;
+  align-items: center;
+  text-align: center;
+  margin-top: 50px;
+  gap: 50px;
+}
+
+.pet-details{
+  flex: 1;
+  min-width: 0;
 }
 
 .pet-info{
@@ -39,6 +44,14 @@ footer{
   gap: 25px;
   justify-content: center;
   align-items: center;
+}
+
+.pet-image-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .pet-name{
@@ -52,5 +65,31 @@ footer{
 .pet-tags{
   font-size: 20px;
 }
+
+.like-dislike{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 150px;
+  font-size: 150px;
+}
+
+.like-dislike .fa-thumbs-up:hover {
+  transform: scale(1.1); /* Increase the size by 10% */
+  color: green; /* Change the color to green */
+}
+
+.like-dislike .fa-thumbs-down:hover {
+  transform: scale(1.1); /* Increase the size by 10% */
+  color: red; /* Change the color to red */
+}
+
+.info-like-dislike {
+  flex: 1;
+  min-width: 0;
+  justify-content: center;
+  align-items: center;
+}
+
 
 
